--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -6,6 +6,55 @@
     padding-right: 30px;
   }
   
+   .MainHeadingDiscount .HeadingDiscount {
+    font-size: 30px;
+    color: #fe4c1c;
+    font-weight: 700;
+   }
+   .MainHeadingDiscount .secondHeadingDiscount { 
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: 12px;
+
+   }
+   .MuiDialogContent-root.MainHeadingDiscount.css-ypiqx9-MuiDialogContent-root {
+    text-align: center;
+}
+.MainHeadingDiscount .formItems {display: flex;
+gap: 21px;
+align-items: center;
+justify-content: center;
+}
+
+.MuiBox-root button {
+  text-transform: capitalize !important;
+  font-size: 18px;
+  color: white;
+}
+
+.MainHeadingDiscount .HeadingDiscountBlack {
+  font-size: 20px;
+  color: "black";
+  font-weight: 700;
+}
+.MainHeadingDiscount .formBtn{
+  background-color: rgb(254, 76, 28);
+  padding-left: 2px;
+  border-radius: 24px;
+  width: 111px;
+  height: 36px;
+  text-align: center;
+}
+.MainHeadingDiscount {
+  margin-bottom: 18px;
+
+}
+.MainHeadingDiscount .emailInput {
+    border: 1px solid gray;
+    height: 30px;
+    text-align: center;
+    width: 253px;
+   }
   /* Max width 767px */
   @media only screen and (max-width: 767px) {
     body {
